--- a/styles/style.css
+++ b/styles/style.css
@@ -6,7 +6,7 @@ body {
 }
 
 header {
-  background: url("h7.jpg") center/cover no-repeat, #fff;
+  background: url("header.jpg") center/cover no-repeat, #fff;
   color: #1b4482;
   padding: 32px 0 16px 0;
   text-align: center;
